--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -75,6 +74,11 @@ body form .input-search .btn:hover {
   background-color: rgba(255, 255, 255, 0.5);
   color: black;
   transition: background-color 200ms ease-in-out;
+}
+
+body form .input-search .btn:active{
+    background-color: #037CFE;
+    color: white;
 }
 body form .temp {
   display: flex;
